layout and spacing fixes

--- a/scss/_links-buttons.scss
+++ b/scss/_links-buttons.scss
@@ -309,6 +309,7 @@ a {
 
 /* related news styles starts here */
 .related-news {
+    padding-top: 18px;
     a {
         text-decoration: none;
         transition: all 0.2s ease;
